--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="firstPage">
       <div class="firstPageHeader">
         <div class="firstPageHeaderLeft">
-          <a href="">Контрагентам</a>
-          <a href="">Дизайнерам </a>
-          <a href="">Вакансии </a>
+          <a>Контрагентам</a>
+          <a>Дизайнерам </a>
+          <a>Вакансии </a>
         </div>
         <img
           src="./images/firstPage/headerlogo.png"
@@ -26,7 +26,7 @@
             <p>Поиск</p>
           </div>
           <div>
-            <a href="">Вход/Регистрация</a>
+            <a>Вход/Регистрация</a>
           </div>
           <div>
             <svg
@@ -63,7 +63,7 @@
         <div class="menuButtonBlink"></div>
       </div>
       <h1>Долго, дорого, богато!</h1>
-      <a href="" class="firstPageButton">КАТАЛОГ ИЗДЕЛИЙ</a>
+      <a href="./catalog.html" class="firstPageButton">КАТАЛОГ ИЗДЕЛИЙ</a>
       <div class="firstPageFooter">
         <div class="firstPageFooterContent">
           <img
@@ -102,10 +102,10 @@
       <div class="burgerMenuWrapper">
         <img src="./images/firstPage/headerlogo.png" alt="">
         <div class="burgerMenuLinks">
-          <a href="">Контрагентам</a>
-          <a href="">Дизайнерам</a>
-          <a href="">Вакансии</a>
-          <a href="">Вход/Регистрация</a>
+          <a>Контрагентам</a>
+          <a>Дизайнерам</a>
+          <a>Вакансии</a>
+          <a>Вход/Регистрация</a>
         </div>
         <div class="burgerMenuFollow">
           <svg
@@ -165,27 +165,27 @@
           <a>Редкость</a>
         </div>
         <div class="secondPageContentBlocks">
-          <a href="">
+          <a>
             <img src="./images/secondPage/Rings.png" alt="" />
             <p>КОЛЬЦА</p>
           </a>
-          <a href="">
+          <a>
             <img src="./images/secondPage/Earrings.png" alt="" />
             <p>СЕРЬГИ</p>
           </a>
-          <a href="">
+          <a>
             <img src="./images/secondPage/Pendants.png" alt="" />
             <p>ПОДВЕСКИ</p>
           </a>
-          <a href="">
+          <a>
             <img src="./images/secondPage/Cufflinks.png" alt="" />
             <p>ЗАПОНКИ</p>
           </a>
-          <a href="">
+          <a>
             <img src="./images/secondPage/Bracelets.png" alt="" />
             <p>БРАСЛЕТЫ</p>
           </a>
-          <a href="">
+          <a>
             <img src="./images/secondPage/Watches.png" alt="" />
             <p>ЧАСЫ</p>
           </a>
@@ -202,13 +202,13 @@
         ultrices eget orci viverra. Egestas quis et ut ultrices imperdiet lectus
         nulla tempus. Pharetra lorem sem purus nisi libero viverra ipsum.
       </p>
-      <a href="">Наши салоны</a>
+      <a>Наши салоны</a>
     </div>
     <div class="forthPage">
       <h3>Полезные статьи</h3>
       <h1>Лучшие советы по подбору дорогих подарков</h1>
       <div class="forthPageBlockS">
-        <a href="">
+        <a>
           <img src="./images/forthPage/ring.png" alt="ring" />
           <p>
             Как выбрать <br />
@@ -216,7 +216,7 @@
             будущей жены
           </p>
         </a>
-        <a href="">
+        <a>
           <img src="./images/forthPage/bracelets.png" alt="" />
           <p>
             Запонки для мужа: <br />
@@ -224,7 +224,7 @@
             покупки аксессуара
           </p>
         </a>
-        <a href="">
+        <a>
           <img src="./images/forthPage/weddingRings.png" alt="" />
           <p>
             Как выбрать <br />
@@ -233,7 +233,7 @@
           </p>
         </a>
       </div>
-      <a href="" class="forthPageButton">читать наш блог</a>
+      <a class="forthPageButton">читать наш блог</a>
     </div>
     <div class="fivthPage">
       <p>#ojjo_jewerly</p>
@@ -276,7 +276,7 @@
         <div class="sixthPageBlocksRight">
           <div>
             <input type="email" placeholder="ВАШ E-MAIL">
-            <a href="">ОТПРАВИТЬ</a>
+            <a>ОТПРАВИТЬ</a>
           </div>
         </div>
       </div>
@@ -285,10 +285,10 @@
       <div class="seventhPageLinks">
         <h1>Полезные ссылки</h1>
         <div>
-        <a href="">Доставка</a>
-        <a href="">Оплата </a>
-        <a href="">Акции</a>
-        <a href="">Политика конфиденциальности</a>
+        <a>Доставка</a>
+        <a>Оплата </a>
+        <a>Акции</a>
+        <a>Политика конфиденциальности</a>
         </div>
       </div>
       <div class="seventhPagePayment">
